--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,2 @@
 <a [routerLink]="['confirm-decorator-demo']" (click)="close.emit()">Confirm Dialog Decorator</a>
+<a [routerLink]="['weekdays-widget-demo']" (click)="close.emit()">Weekdays</a>
