--- a/src/app/features/weekdays/components/weekdays-widget/weekdays-widget.component.scss
+++ b/src/app/features/weekdays/components/weekdays-widget/weekdays-widget.component.scss
@@ -3,9 +3,13 @@
   justify-content: center;
   align-items: center;
   height: calc(100vh - 64px);
+  padding: 0 1rem;
 
   .weekday-container {
-    background: linear-gradient(to right bottom, #1E8DC8, #00DCB4);
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    background: linear-gradient(to right, #1E8DC8, #00DCB4);
     padding: 1rem;
     border-radius: .5rem;
   }
